--- a/MyFirstApp/app/src/main/AndroidManifest.xml
+++ b/MyFirstApp/app/src/main/AndroidManifest.xml
@@ -3,16 +3,18 @@
     package="com.example.myfirstapp">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".presentation.AddActivity"></activity>
+        <activity android:name=".presentation.EditActivity"></activity>
         <activity android:name=".presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
